# lmql

./: .dockerignore  .gitignore  .readthedocs.yaml  404.html  CNAME  CONTRIBUTING.md  Dockerfile.tests  LICENSE  MANIFEST.in  README.html  README.md  TODO.md  api.py  assertion_errors.py  branch.py  error_stairs.py  error_top_level.py  example_graph.py  flake.nix  graphs.py  hashmap.json  hello_ada.lmql  hello_chatgpt.lmql  index-next.html  index.html  logprob_graph.py  multi_layer_counts.py  multi_level_explore.py  pyproject.toml  reinstantiate.py  requirements.txt  setup.cfg  test.py  text.py
.github/workflows/: lmql-ci.yml  lmql-optional-tests.yml  lmql-release-test.yml  lmql-release.yml  lmql-test-release.yml  lmql-tests.yml  lmql-web.yml
actions/: index.html  lmql-extra.css
assets/: README.md.82e2e066.js  README.md.82e2e066.lean.js  README.md.b6f5b379.js  README.md.b6f5b379.lean.js  README.md.cc819db3.js  README.md.cc819db3.lean.js  app.12f2e302.js  app.33086ae1.js  app.7a112693.js  app.9a8ef979.js  app.aefd9b48.js  app.f6a80250.js  app.fedc97c3.js  blog_index.md.2bf582de.js  blog_index.md.33bf8a57.js  blog_index.md.50811370.lean.js  blog_index.md.584788ab.lean.js  blog_index.md.60c806d4.lean.js  blog_index.md.78d1ea8e.js  blog_index.md.803e9f06.js  blog_index.md.a4d75c89.js  blog_index.md.a98f0c43.js  blog_index.md.b2796768.lean.js  blog_index.md.c0f7448f.lean.js  blog_index.md.d1273754.js  blog_index.md.db259d96.js  blog_index.md.fde542fd.lean.js  blog_index.md.ff9d28cf.lean.js  blog_posts_developer-survey.md.9d76d0a1.js  blog_posts_developer-survey.md.9d76d0a1.lean.js  blog_posts_developer-survey.md.9ee0ba44.js  blog_posts_developer-survey.md.9ee0ba44.lean.js  blog_posts_release-0.0.5.md.6f3e470e.js  blog_posts_release-0.0.5.md.6f3e470e.lean.js  blog_posts_release-0.0.5.md.70227621.js  blog_posts_release-0.0.5.md.70227621.lean.js  blog_posts_release-0.0.5.md.830afb0d.js  blog_posts_release-0.0.5.md.830afb0d.lean.js  blog_posts_release-0.0.6.1.md.120a8d77.js  blog_posts_release-0.0.6.1.md.120a8d77.lean.js  (+637 more)
assets/chunks/: @localSearchIndexroot.12c59d57.js  @localSearchIndexroot.7229f7e4.js  @localSearchIndexroot.7732f6f8.js  @localSearchIndexroot.977a286e.js  VPAlgoliaSearchBox.3736395d.js  VPAlgoliaSearchBox.a70fb38b.js  VPLocalSearchBox.4b0c4c74.js  VPLocalSearchBox.86c67441.js  VPLocalSearchBox.99700e46.js  VPLocalSearchBox.e297dfcc.js  VersionSwitch.5d3190fc.js  framework.4636910e.js  framework.980cae92.js  framework.c2adf1ba.js  lmql.17cc0505.js  theme.2a4aaf42.js  theme.5491eb3a.js  theme.5bb559a9.js  theme.908ddb20.js  theme.93bc0669.js  theme.d06187ef.js
blog/: index.html  release-0.0.5.html  release-0.0.6.1.html  release-0.0.6.3.html  release-0.0.6.4.html  release-0.0.6.5.html  release-0.0.6.6.html  release-0.0.6.html
blog/posts/: developer-survey.html  release-0.0.5.html  release-0.0.6.1.html  release-0.0.6.3.html  release-0.0.6.4.html  release-0.0.6.5.html  release-0.0.6.6.html  release-0.0.6.html  release-0.7.html
case-studies/: dynamic-tool-use.lmql  streaming.lmql  streaming_explicit.lmql  syntax.lmql  tot.lmql  validation.lmql  validation_loop.lmql
chat/: index.html
docs/: README.md  RELEASE.md  index.html  index.md  installation.html  package-lock.json  package.json  requirements.txt  todo.md
docs/.vitepress/: config.mjs  grammar.hl.js  highlighter.js  link-checker.js  lmql.hl.js  lmql.tmLanguage.json  notebooks.js
docs/_components/: LMExamples.vue  LMFeature.vue  LMHero.vue  LMSideBySide.vue
docs/blog/: index.md  posts.data.js
docs/development/: dev-setup.html  docker-setup.html  documentation.html
docs/docs/: index.md  installation.md
docs/features/: 1-code.md  2-nested.md  3-models.md  _1-types.md  features.data.js
docs/language/: constraints.html  decoding.html  decorators.html  nestedqueries.html  overview.html  reference.html  scripted-prompting.html  tools.html
docs/latest/: index.html  installation.html
docs/lib/: chat.html  generations.html  inference-certificates.html  integrations.html  output.html  python.html
docs/models/: azure.html  hf.html  index.html  llama.cpp.html  openai.html  replicate.html
docs/public/: promptdown.js
docs/research/: index.md
docs/source/: 404.html  conf.py  dev-setup.md  docker-setup.md  index.rst  installation.md  quickstart.md
features/: 1-code.html  2-nested.html  3-models.html  _1-types.html
features/examples/: 1-packing-list.html  2-constraining.html  2.5-data-types.html  3-multi-part.html  3.5-distributions.html  3.6-python.html  4-meta-prompting.html  5-wikipedia.html  6-chat.html
playground/: asset-manifest.json  index.html  lmql.web.min.js
playground/doc-snippets/: blog-release-0-0-6-3-md-conditional_stopping .json  blog-release-0-0-6-3-md-token_constraints.json  blog-release-0-0-6-5-md-list-with-array.json  blog-release-0-0-6-5-md-llama-cpp-blog.json  blog-release-0-0-6-5-md-simple-syntax-default.json  blog-release-0-0-6-5-md-simple-syntax.json  blog-release-0-0-6-md-joke-with-cache.json  blog-release-0-0-6-md-list-of-things-speculative.json  blog-release-0-0-6-md-long-form-constraints-speculative.json  language-azure-md-azure-api-key.json  language-azure-md-use-azure-model.json  language-constraints-md-length.json  language-constraints-md-number.json  language-constraints-md-set.json  language-custom-constraints-md-foo_bar_constraint.json  language-decoders-md-specify-decoder.json  language-decorators-md-decorators.json  (+41 more)
playground/wheels/gpt3-tokenizer-comma-fix/: .gitignore  LICENSE  README.rst  pyproject.toml
playground/wheels/gpt3-tokenizer-comma-fix/gpt3_tokenizer/: __init__.py  _entry.py  _functions.py
research/: index.html
scripts/: Dockerfile  Dockerfile.serve  activate-dev.sh  changelog.sh  deploy-web.sh  lmql-serve-docker.py  lmql-serve-docker.sh  pypi-release.sh  serve-all.py  wheel.sh
scripts/flake.d/: README.md  overrides.nix  pyproject.toml
try/: index.html
web/: deploy.sh  generate.js  generate_val_css.py  index-next.html  index.template.html  package-lock.json  package.json  queries.js  showcase-queries.json  tagged-model-result.js
(+1048 files in other folders)
