[metadata]
name = lmql 
version = 0.0.6.2
author = Luca Beurer-Kellner, Marc Fischer, Martin Vechev
author_email = hello@lmql.ai
description = A query language for language models.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://lmql.ai
project_urls =
    Docs = https://docs.lmql.ai
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
include_package_data = True
python_requires = >=3.10
install_requires =
    astunparse ==1.6.3
    openai
    termcolor
    pydot
    numpy
    gpt3_tokenizer

[options.extras_require]
    hf = transformers ==4.25.1; accelerate

[options.packages.find]
where = src
exclude = 
    **/node_modules/*
    **/web/**/*
    **/vscode/**/*

[options.entry_points]
console_scripts =
    lmql = lmql.cli:main
