[metadata]
name = lmql 
version = 0.999999
author = Luca Beurer-Kellner, Marc Fischer, Martin Vechev
author_email = hello@lmql.ai
description = A query language for language models.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://lmql.ai
project_urls =
    Docs = https://docs.lmql.ai
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
include_package_data = True
python_requires = >=3.10

# When updating this list, regenerate poetry.lock by running ''poetry lock --no-update'' in scripts/flake.d
install_requires =
    aiohttp <4.0.0
    astunparse ==1.6.3
    openai
    termcolor
    numpy
    tiktoken

[options.extras_require]
# When updating version requirements for optional dependencies, also update flake.d/pyproject.toml
hf =
    accelerate
    transformers >=4.28.1
llama =
    llama-cpp-python
replicate =
    aiohttp-sse-client
    transformers >=4.28.1
tests =
    pytest
    pytest-asyncio

[options.packages.find]
where = src
exclude = 
    **/node_modules/*
    **/vscode/**/*

[options.entry_points]
console_scripts =
    lmql = lmql.cli:main
